# linphone-desktop-full

./: .gitlab-ci.yml  .gitmodules  .qmlformat.ini  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: sync.yml
Linphone/: CMakeLists.txt  linphone.notifyrc  main.cpp
Linphone/core/: App.cpp  App.hpp
Linphone/core/account/: AccountCore.cpp  AccountCore.hpp
Linphone/core/address-books/ldap/: LdapCore.cpp
Linphone/core/call/: CallCore.cpp  CallCore.hpp  CallList.cpp
Linphone/core/chat/: ChatCore.cpp  ChatCore.hpp  ChatList.cpp
Linphone/core/chat/message/: EventLogCore.cpp  EventLogList.cpp
Linphone/core/conference/: ConferenceInfoList.cpp  ConferenceInfoList.hpp  ConferenceInfoProxy.cpp  ConferenceInfoProxy.hpp
Linphone/core/friend/: FriendCore.cpp
Linphone/core/login/: LoginPage.cpp
Linphone/core/notifier/: Notifier.cpp  WindowsNotificationBackend.hpp
Linphone/core/participant/: ParticipantDeviceProxy.cpp  ParticipantInfoProxy.cpp  ParticipantProxy.cpp
Linphone/core/path/: Paths.cpp  Paths.hpp
Linphone/core/proxy/: LimitProxy.cpp  LimitProxy.hpp  SortFilterProxy.cpp  SortFilterProxy.hpp
Linphone/core/search/: MagicSearchList.cpp
Linphone/core/setting/: SettingsCore.cpp  SettingsCore.hpp
Linphone/data/languages/: de.ts  en.ts  fr.ts  fr_FR.ts  sk.ts
Linphone/model/: CMakeLists.txt
Linphone/model/account/: AccountModel.cpp  AccountModel.hpp
Linphone/model/address-books/ldap/: LdapModel.cpp
Linphone/model/auth/: OIDCModel.cpp
Linphone/model/call/: CallModel.cpp
Linphone/model/chat/: ChatModel.cpp  ChatModel.hpp
Linphone/model/core/: CoreModel.cpp  CoreModel.hpp
Linphone/model/friend/: FriendModel.cpp
Linphone/model/setting/: SettingsModel.cpp  SettingsModel.hpp
Linphone/model/tool/: ToolModel.cpp  ToolModel.hpp
Linphone/model/transcription/: TranscriptionModel.cpp  TranscriptionModel.hpp
Linphone/tool/: Constants.hpp  LinphoneEnums.cpp  Utils.cpp  Utils.hpp
Linphone/tool/native/: DesktopToolsMacOsNative.mm
Linphone/tool/providers/: AvatarProvider.cpp  EmojiProvider.cpp  ExternalImageProvider.cpp  ImageProvider.cpp  ScreenProvider.cpp  ThumbnailProvider.cpp
Linphone/tool/thread/: SafeConnection.hpp
Linphone/view/: CMakeLists.txt
Linphone/view/Control/Button/: BigButton.qml  Button.qml  CalendarComboBox.qml  CheckBox.qml  CheckableButton.qml  ComboBox.qml  CountryIndicatorCombobox.qml  HelpIconLabelButton.qml  IconButton.qml  IconLabelButton.qml  LabelButton.qml  MediumButton.qml  PopupButton.qml  RadioButton.qml  RoundButton.qml  SecurityRadioButton.qml  Slider.qml  SmallButton.qml  Switch.qml
Linphone/view/Control/Button/Settings/: ComboSetting.qml  KeyboardShortcutSetting.qml  SwitchSetting.qml
Linphone/view/Control/Container/: Carousel.qml  CreationFormLayout.qml  DetailLayout.qml  FormItemLayout.qml  GroupCreationFormLayout.qml  ScrollBar.qml  Section.qml  TabBar.qml  VerticalTabBar.qml
Linphone/view/Control/Container/Call/: ActiveSpeakerLayout.qml  CallGridLayout.qml  CallHistoryLayout.qml  CallLayout.qml  GridLayout.qml  Mosaic.qml
Linphone/view/Control/Container/Chat/: ChatFilesGridLayout.qml
Linphone/view/Control/Container/Contact/: ContactLayout.qml  PresenceNoteLayout.qml
Linphone/view/Control/Container/Main/: MainRightPanel.qml
Linphone/view/Control/Display/: EffectImage.qml  Flickable.qml  GradientRectangle.qml  HorizontalBar.qml  MediaProgressBar.qml  ProgressBar.qml  RoundProgressBar.qml  RoundedPane.qml  Sticker.qml  TemporaryText.qml  Text.qml  ToolTip.qml  UnreadNotification.qml
Linphone/view/Control/Display/Call/: CallHistoryListView.qml  CallListView.qml  CallStatistics.qml
Linphone/view/Control/Display/Chat/: AnimatedImageFileView.qml  ChatAudioContent.qml  ChatListView.qml  ChatMessage.qml  ChatMessageContent.qml  ChatMessageInvitationBubble.qml  ChatMessagesListView.qml  ChatTextContent.qml  Event.qml  FileView.qml  ImageFileView.qml  VideoFileView.qml
Linphone/view/Control/Display/Contact/: AllContactListView.qml  Avatar.qml  Contact.qml  ContactListItem.qml  ContactListView.qml  ContactStatusPopup.qml  Presence.qml  PresenceSetCustomStatus.qml  PresenceStatusItem.qml  Voicemail.qml
Linphone/view/Control/Display/Meeting/: MeetingListView.qml
Linphone/view/Control/Display/Participant/: ParticipantDeviceListView.qml  ParticipantInfoListView.qml  ParticipantListView.qml
Linphone/view/Control/Display/Settings/: SettingsMenuItem.qml
Linphone/view/Control/Form/Call/: ChangeLayoutForm.qml
Linphone/view/Control/Form/Login/: LoginForm.qml
Linphone/view/Control/Form/Settings/: EncryptionSettings.qml  MultimediaSettings.qml  ScreencastSettings.qml
Linphone/view/Control/Input/: Calendar.qml  DecoratedTextField.qml  DigitInput.qml  KeyboardShortcutInput.qml  NumericPad.qml  PhoneNumberInput.qml  SearchBar.qml  TextArea.qml  TextField.qml  TimeComboBox.qml
Linphone/view/Control/Input/Chat/: ChatDroppableTextArea.qml
Linphone/view/Control/Popup/: DesktopPopup.qml  InformationPopup.qml  NumericPadPopup.qml  Popup.qml
Linphone/view/Control/Popup/Dialog/: AuthenticationDialog.qml  Dialog.qml  ZrtpAuthenticationDialog.qml
Linphone/view/Control/Popup/Loading/: LoadingPopup.qml
Linphone/view/Control/Popup/Notification/: Notification.qml  NotificationReceivedCall.qml  NotificationReceivedMessage.qml  TemporaryNotification.qml
Linphone/view/Control/Tool/: MovableMouseArea.qml
Linphone/view/Control/Tool/Helper/: utils.js
Linphone/view/Control/Tool/Prototype/: AccountsPrototype.qml  CallPrototype.qml  CameraPrototype.qml  CanvasCircle.qml  FriendPrototype.qml  ItemPrototype.qml  PhoneNumberPrototype.qml
Linphone/view/Page/Form/Call/: NewCallForm.qml
Linphone/view/Page/Form/Chat/: NewChatForm.qml  SelectedChatView.qml
Linphone/view/Page/Form/Contact/: ContactDescription.qml  ContactEdition.qml
Linphone/view/Page/Main/: AbstractMainPage.qml
Linphone/view/Page/Window/: AbstractWindow.qml
Linphone/view/Style/: AppIcons.qml  DefaultStyle.qml  FileViewStyle.qml  Themes.qml  Typography.qml  buttonStyle.js
Linphone/view/Test/: ItemsTest.qml  RectangleTest.qml
(+79 files in other folders)
